@@ -1,7 +1,7 @@
 plugins {
     id "architectury-plugin" version "3.4-SNAPSHOT"
-    id "dev.architectury.loom" version "1.5-SNAPSHOT" apply false
-    id "io.github.pacifistmc.forgix" version "1.2.6"
+    id "dev.architectury.loom" version "1.6-SNAPSHOT" apply false
+    id "io.github.pacifistmc.forgix" version "1.2.7"
     id "me.modmuss50.mod-publish-plugin" version "0.5.0"
 }
 
@@ -14,7 +14,12 @@ subprojects {
 
     dependencies {
         minecraft "com.mojang:minecraft:${rootProject.minecraft_version}"
-        mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
+        mappings loom.layered {
+            it.mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
+
+            // somebody at neoforge or arch goofed so we need this
+            it.mappings(rootProject.rootDir.toPath().resolve("1.20.5.tiny").toFile())
+        }
         implementation(annotationProcessor("io.github.llamalad7:mixinextras-common:0.3.2"))
     }
 }
@@ -35,11 +40,6 @@ allprojects {
         // for more information about repositories.
     }
 
-    tasks.withType(JavaCompile) {
-        options.encoding = "UTF-8"
-        options.release = 17
-    }
-
     forgix {
         group "me.thosea"
         outputDir "build/libs/merged"
@@ -56,7 +56,7 @@ file("changelog.txt").withInputStream {
 
 publishMods {
     file = file("build/libs/merged/BadOptimizations-${rootProject.mod_version}.jar")
-    displayName = "$rootProject.mod_version (1.20.2-1.20.4)"
+    displayName = "$rootProject.mod_version (1.20.5)"
 
     version = rootProject.mod_version
     type = STABLE
@@ -66,19 +66,14 @@ publishMods {
     modrinth {
         accessToken = providers.environmentVariable("MODRINTH_TOKEN")
         projectId = "g96Z4WVZ"
-        minecraftVersions.add("1.20.2")
-        minecraftVersions.add("1.20.3")
-        minecraftVersions.add("1.20.4")
+        minecraftVersions.add("1.20.5")
     }
 
     curseforge {
         accessToken = providers.environmentVariable("CURSEFORGE_API_KEY")
         projectId = "949555"
-        minecraftVersions.add("1.20.2")
-        minecraftVersions.add("1.20.3")
-        minecraftVersions.add("1.20.4")
-        javaVersions.add(JavaVersion.VERSION_17)
-        javaVersions.add(JavaVersion.VERSION_18)
+        minecraftVersions.add("1.20.5")
+        javaVersions.add(JavaVersion.VERSION_21)
         clientRequired = true
     }
 }
