@@ -18,10 +18,6 @@
     "debug.MixinGameEventDebugRenderer",
     "debug.MixinGameTestDebugRenderer",
     "debug.MixinVillageDebugRenderer",
-    "entitydata.MixinDataTracker",
-    "entitydata.MixinEntity",
-    "entitydata.MixinLivingEntity",
-    "entitydata.MixinPlayer",
     "renderer.blockentity.MixinBlockEntityRenderDispatcher",
     "renderer.blockentity.MixinBlockEntityType",
     "renderer.entity.MixinClientPlayer",
