@@ -13,7 +13,7 @@
     "badoptimizations.mixins.json"
   ],
   "depends": {
-    "minecraft": ">=1.20.2"
+    "minecraft": ">=1.20.5"
   },
   "custom": {
     "modmenu": {
