@@ -22,7 +22,7 @@ issueTrackerURL="https://github.com/ItsThosea/BadOptimizations/issues"
    modId="minecraft"
    mandatory=true
    # This version range declares a minimum of the current minecraft version up to but not including the next major version
-   versionRange="[1.20.2,1.21)"
+   versionRange="[1.20.5,)"
    ordering="NONE"
    side="CLIENT"
 
