@@ -1,11 +1,11 @@
 org.gradle.jvmargs=-Xmx3G
 
-minecraft_version=1.20.4
-neo_version=20.4.233
+minecraft_version=1.20.5
+neo_version=20.5.3-beta
 
 archives_base_name=BadOptimizations
 mod_version=2.1.1
 maven_group=me.thosea
 
-yarn_mappings=1.20.4+build.1
-fabric_loader_version=0.15.3
+yarn_mappings=1.20.5+build.1
+fabric_loader_version=0.15.10
